(style) Fix image distortion

--- a/client/styles/styles.css
+++ b/client/styles/styles.css
@@ -9,6 +9,8 @@ body {
 .painting {
   position: relative;
   margin: .5em .5em;
-  width: 10em;
-  height: 15em;
+  width: auto;
+  height: auto;
+  max-width: 10em;
+  max-height: 15em;
 }
